--- a/config/AX6_purple.config
+++ b/config/AX6_purple.config
@@ -20,18 +20,29 @@ CONFIG_LIBSODIUM_MINIMAL=y
 CONFIG_LUCI_LANG_en=y
 CONFIG_LUCI_LANG_zh_Hans=y
 
-#虚拟内存
 CONFIG_PACKAGE_kmod-zram=y
 CONFIG_PACKAGE_zram-swap=y
 
-#ipv6
-#CONFIG_PACKAGE_ipv6helper=y
-#CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
-#CONFIG_PACKAGE_6in4=y
-#CONFIG_PACKAGE_6rd=y
-#CONFIG_PACKAGE_6to4=y
 
-#删除默认的USB相关
+
+
+#CONFIG_PACKAGE_ipv6helper=y
+#ipv6
+# CONFIG_PACKAGE_dnsmasq is not set
+CONFIG_PACKAGE_dnsmasq-full=y
+CONFIG_PACKAGE_dnsmasq_full_auth=y
+CONFIG_PACKAGE_dnsmasq_full_conntrack=y
+CONFIG_PACKAGE_dnsmasq_full_dhcp=y
+CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+CONFIG_PACKAGE_dnsmasq_full_dnssec=y
+CONFIG_PACKAGE_dnsmasq_full_ipset=y
+CONFIG_PACKAGE_dnsmasq_full_noid=y
+CONFIG_PACKAGE_dnsmasq_full_tftp=y
+CONFIG_PACKAGE_6in4=y
+CONFIG_PACKAGE_6rd=y
+CONFIG_PACKAGE_6to4=y
+
+
 # CONFIG_PACKAGE_kmod-usb-core is not set
 # CONFIG_PACKAGE_kmod-usb-dwc3 is not set
 # CONFIG_PACKAGE_kmod-usb3 is not set
@@ -39,11 +50,10 @@ CONFIG_PACKAGE_zram-swap=y
 
 CONFIG_PACKAGE_cgi-io=y
 
+
 CONFIG_PACKAGE_kmod-qca-nss-dp=y
 CONFIG_PACKAGE_kmod-qca-ssdk-nohnat=y
 
-#插件区
-CONFIG_PACKAGE_luci-app-adbyby-plus=y
 
 CONFIG_PACKAGE_luci-app-passwall=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook is not set
@@ -66,6 +76,13 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray_Plugin is not set
 
+
+
+
+
+
+
+
 CONFIG_PACKAGE_libiwinfo-lua=y
 CONFIG_PACKAGE_liblua=y
 CONFIG_PACKAGE_liblucihttp=y
@@ -80,20 +97,18 @@ CONFIG_PACKAGE_luci-app-ddns=y
 # CONFIG_PACKAGE_luci-app-dnsfilter is not set
 
 CONFIG_PACKAGE_luci-app-upnp=y
+
 CONFIG_PACKAGE_luci-app-ntpc=y
+
+
+# CONFIG_PACKAGE_luci-app-ssr-plus is not set
 CONFIG_PACKAGE_luci-app-openclash=y
 
 # CONFIG_PACKAGE_luci-app-qos is not set
-# CONFIG_PACKAGE_luci-app-smartdns is not set
+CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 
-#CONFIG_PACKAGE_luci-app-adguardhome is not set
-CONFIG_PACKAGE_luci-theme-argon=y
-CONFIG_PACKAGE_luci-theme-argon_armygreen=y
-CONFIG_PACKAGE_luci-app-netdata=y
-CONFIG_PACKAGE_luci-app-argon-config=y
-CONFIG_PACKAGE_luci-theme-bootstrap=y
-CONFIG_PACKAGE_luci-theme-ifit=y
+
 
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-opkg=y
@@ -109,6 +124,7 @@ CONFIG_PACKAGE_luci-mod-system=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-proto-ppp=y
 
+CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_nss-firmware-ipq8074=y
 CONFIG_PACKAGE_qca-ssdk-shell=y
 CONFIG_PACKAGE_rpcd=y
