--- a/config/AX6_purple.config
+++ b/config/AX6_purple.config
@@ -1,52 +1,22 @@
-
-#2022-6-21，08:00 菜菜
-
 CONFIG_TARGET_ipq807x=y
 CONFIG_TARGET_ipq807x_generic=y
-CONFIG_TARGET_ipq807x_generic_DEVICE_redmi_ax6=y
-
-CONFIG_LIBCURL_NGHTTP2=y
-
-
-CONFIG_LIBCURL_COOKIES=y	
-CONFIG_LIBCURL_FILE=y	
-CONFIG_LIBCURL_FTP=y	
-CONFIG_LIBCURL_HTTP=y	
-CONFIG_LIBCURL_NO_SMB="!"	
-CONFIG_LIBCURL_OPENSSL=y	
-CONFIG_LIBCURL_PROXY=y	
-CONFIG_LIBMBEDTLS_HAVE_ARMV8CE_AES=y	
-CONFIG_LIBSODIUM_MINIMAL=y
-
-#语言
-CONFIG_LUCI_LANG_en=y
-CONFIG_LUCI_LANG_zh_Hans=y
-
-#虚拟内存
-CONFIG_PACKAGE_kmod-zram=y
-CONFIG_PACKAGE_zram-swap=y
-
-#ipv6
-#CONFIG_PACKAGE_ipv6helper=y
-#CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
-#CONFIG_PACKAGE_6in4=y
-#CONFIG_PACKAGE_6rd=y
-#CONFIG_PACKAGE_6to4=y
-
-#删除默认的USB相关
-# CONFIG_PACKAGE_kmod-usb-core is not set
-# CONFIG_PACKAGE_kmod-usb-dwc3 is not set
-# CONFIG_PACKAGE_kmod-usb3 is not set
-# CONFIG_PACKAGE_kmod-usb-dwc3-qcom is not set
-
-
+CONFIG_TARGET_MULTI_PROFILE=y
+CONFIG_TARGET_DEVICE_ipq807x_generic_DEVICE_edgecore_eap102=y
+CONFIG_TARGET_DEVICE_PACKAGES_ipq807x_generic_DEVICE_edgecore_eap102=""
+CONFIG_TARGET_DEVICE_ipq807x_generic_DEVICE_edimax_cax1800=y
+CONFIG_TARGET_DEVICE_PACKAGES_ipq807x_generic_DEVICE_edimax_cax1800=""
+CONFIG_TARGET_DEVICE_ipq807x_generic_DEVICE_qnap_301w=y
+CONFIG_TARGET_DEVICE_PACKAGES_ipq807x_generic_DEVICE_qnap_301w=""
+CONFIG_TARGET_DEVICE_ipq807x_generic_DEVICE_redmi_ax6=y
+CONFIG_TARGET_DEVICE_PACKAGES_ipq807x_generic_DEVICE_redmi_ax6=""
+CONFIG_TARGET_DEVICE_ipq807x_generic_DEVICE_xiaomi_ax3600=y
+CONFIG_TARGET_DEVICE_PACKAGES_ipq807x_generic_DEVICE_xiaomi_ax3600=""
+CONFIG_TARGET_DEVICE_ipq807x_generic_DEVICE_xiaomi_ax9000=y
+CONFIG_TARGET_DEVICE_PACKAGES_ipq807x_generic_DEVICE_xiaomi_ax9000=""
+CONFIG_TARGET_PER_DEVICE_ROOTFS=y
 CONFIG_PACKAGE_cgi-io=y
-
-#nss
 CONFIG_PACKAGE_kmod-qca-nss-dp=y
 CONFIG_PACKAGE_kmod-qca-ssdk-nohnat=y
-
-
 CONFIG_PACKAGE_libiwinfo-lua=y
 CONFIG_PACKAGE_liblua=y
 CONFIG_PACKAGE_liblucihttp=y
@@ -54,13 +24,6 @@ CONFIG_PACKAGE_liblucihttp-lua=y
 CONFIG_PACKAGE_libubus-lua=y
 CONFIG_PACKAGE_lua=y
 CONFIG_PACKAGE_luci=y
-
-# CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
-# CONFIG_PACKAGE_luci-app-dnsfilter is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus is not set
-# CONFIG_PACKAGE_luci-app-qos is not set
-# CONFIG_PACKAGE_luci-app-smartdns is not set
-
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-opkg=y
 CONFIG_PACKAGE_luci-base=y
@@ -72,11 +35,9 @@ CONFIG_PACKAGE_luci-mod-admin-full=y
 CONFIG_PACKAGE_luci-mod-network=y
 CONFIG_PACKAGE_luci-mod-status=y
 CONFIG_PACKAGE_luci-mod-system=y
-
-# CONFIG_PACKAGE_luci-proto-ipv6 is not set
-
+CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-proto-ppp=y
-CONFIG_PACKAGE_nss-firmware-ipq8074=y
+CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_qca-ssdk-shell=y
 CONFIG_PACKAGE_rpcd=y
 CONFIG_PACKAGE_rpcd-mod-file=y
@@ -85,29 +46,8 @@ CONFIG_PACKAGE_rpcd-mod-luci=y
 CONFIG_PACKAGE_rpcd-mod-rrdns=y
 CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
-
-
-CONFIG_PACKAGE_luci-app-ddns=y
-CONFIG_PACKAGE_luci-app-upnp=y
-CONFIG_PACKAGE_luci-app-ntpc=y
-CONFIG_PACKAGE_luci-app-openclash=y
-CONFIG_PACKAGE_luci-app-ttyd=y
-
-
-CONFIG_PACKAGE_luci-theme-bootstrap=y
-
-#----------------------------------#
-CONFIG_PACKAGE_luci-app-jd-dailybonus=y
-CONFIG_PACKAGE_luci-app-uugamebooster=y
-CONFIG_PACKAGE_luci-app-guest-wifi=y
-CONFIG_PACKAGE_luci-app-vlmcsd=y
-CONFIG_PACKAGE_luci-app-wifischedule=y
-CONFIG_PACKAGE_luci-app-nlbwmon=y
-#主题
-
-CONFIG_PACKAGE_luci-theme-ifit=y
-CONFIG_PACKAGE_luci-theme-argon=y
-CONFIG_PACKAGE_luci-app-argon-config=y
-CONFIG_PACKAGE_luci-theme-argon_armygreen=y
-
-
+CONFIG_PACKAGE_wpad-basic-wolfssl=m
+CONFIG_PACKAGE_wpad-wolfssl=y
+CONFIG_TARGET_ALL_PROFILES=y
+# CONFIG_TARGET_INITRAMFS_COMPRESSION_NONE is not set
+CONFIG_TARGET_INITRAMFS_COMPRESSION_ZSTD=y
