--- a/config/AX6-5.15.config
+++ b/config/AX6-5.15.config
@@ -1,3 +1,6 @@
+CONFIG_TARGET_ipq807x=y
+CONFIG_TARGET_ipq807x_generic=y
+CONFIG_TARGET_ipq807x_generic_DEVICE_redmi_ax6=y
 
 CONFIG_TARGET_ipq807x=y
 CONFIG_TARGET_ipq807x_generic=y
@@ -134,4 +137,3 @@ CONFIG_PACKAGE_rpcd-mod-luci=y
 CONFIG_PACKAGE_rpcd-mod-rrdns=y
 CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
-
