--- a/config/AX6_purple.config
+++ b/config/AX6_purple.config
@@ -65,8 +65,6 @@ CONFIG_PACKAGE_liblucihttp-lua=y
 CONFIG_PACKAGE_libubus-lua=y
 CONFIG_PACKAGE_lua=y
 CONFIG_PACKAGE_luci=y
-
-# CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-opkg=y
 CONFIG_PACKAGE_luci-base=y
@@ -82,6 +80,7 @@ CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-proto-ppp=y
 
 CONFIG_PACKAGE_nss-firmware-ipq8074=y
+
 CONFIG_PACKAGE_qca-ssdk-shell=y
 CONFIG_PACKAGE_rpcd=y
 CONFIG_PACKAGE_rpcd-mod-file=y
@@ -91,13 +90,20 @@ CONFIG_PACKAGE_rpcd-mod-rrdns=y
 CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
 
+CONFIG_PACKAGE_wpad-basic-wolfssl=m
+CONFIG_PACKAGE_wpad-wolfssl=y
+CONFIG_TARGET_ALL_PROFILES=y
+# CONFIG_TARGET_INITRAMFS_COMPRESSION_NONE is not set
+CONFIG_TARGET_INITRAMFS_COMPRESSION_ZSTD=y
 
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-ddns=y
+
 # CONFIG_PACKAGE_luci-app-dnsfilter is not set
 CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-ntpc=y
 # CONFIG_PACKAGE_luci-app-ssr-plus is not set
+# CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
 
 # CONFIG_PACKAGE_luci-app-qos is not set
 # CONFIG_PACKAGE_luci-app-smartdns is not set
