--- a/config/AX6_purple.config
+++ b/config/AX6_purple.config
@@ -142,6 +142,6 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
 
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-app-argon-config=y
-CONFIG_PACKAGE_luci-theme-ifit=y
+# CONFIG_PACKAGE_luci-theme-ifit is not set
 CONFIG_PACKAGE_luci-theme-argon_armygreen=y
 
